--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,12 @@
     <div>
       <h3>Naša lokacija</h3>
       <iframe
-        src="https://www.google.com/maps/place/Trg+dr.+Ante+Starčevića+2,+10410,+Velika+Gorica/@45.7104882,16.0558469,17z/data=!3m1!4b1!4m6!3m5!1s0x47667e41f55606e7:0x166996dd3fd730f1!8m2!3d45.7104882!4d16.0584218!16s%2Fg%2F11vlrzmjxv?entry=ttu&g_ep=EgoyMDI2MDEyMS4wIKXMDSoASAFQAw%3D%3D"
+        src="https://www.google.com/maps?q=Trg%20dr.%20Ante%20Starčevića%202,%20Velika%20Gorica&output=embed"
         width="100%"
         height="250"
         style="border:0;"
-        loading="lazy">
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
   </div>
