--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,13 @@
 
     <div>
       <h3>Naša lokacija</h3>
-      <iframe
-        src="https://www.google.com/maps?q=Trg%20dr.%20Ante%20Starčevića%202,%20Velika%20Gorica&output=embed"
-        width="100%"
-        height="250"
-        style="border:0;"
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2786.0273476495404!2d16.058421799999998!3d45.7104882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47667e41f55606e7%3A0x166996dd3fd730f1!2sTrg%20dr.%20Ante%20Star%C4%8Devi%C4%87a%202%2C%2010410%2C%20Velika%20Gorica!5e0!3m2!1shr!2shr!4v1769375630767!5m2!1shr!2shr" 
+      width="600" 
+      height="450" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
   </div>
