--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
 <div id="header-placeholder"></div>
 
+<div id="header-placeholder"></div>
+
+<section class="hero-image">
+  <img src="images/laus.jpg" alt="Lauš usluge j.d.o.o. - prijevoz robe">
+</section>
+
+
 <main class="container">
   <section class="hero">
     <h2>Pouzdan prijevoz robe širom Europe</h2>
