--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 
 <div id="header-placeholder"></div>
 
-<section class="hero-image">
-  <img src="images/laus.jpg" alt="Lauš usluge j.d.o.o. - prijevoz robe">
-</section>
-
-
 <main class="container">
   <section class="hero">
     <h2>Pouzdan prijevoz robe širom Europe</h2>
@@ -39,6 +34,13 @@
       <li>✔ 24/7 podrška</li>
     </ul>
   </section>
+
+  <section class="company-image container">
+    <img src="./images/laus.jpg" alt="Lauš usluge j.d.o.o. - sjedište tvrtke">
+  </section>
+
+
+
 </main>
 
 <div id="footer-placeholder"></div>
