--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul>
       <li>✔ Nacionalni i međunarodni prijevoz</li>
       <li>✔ Sigurna dostava</li>
-      <li>✔ 24//7 podrška</li>
+      <li>✔ 24/7 podrška</li>
     </ul>
   </section>
 
