--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <div id="header-placeholder"></div>
 
-<div id="header-placeholder"></div>
 
 <main class="container">
   <section class="hero">
@@ -31,7 +30,7 @@
     <ul>
       <li>✔ Nacionalni i međunarodni prijevoz</li>
       <li>✔ Sigurna dostava</li>
-      <li>✔ 24//7 podrška</li>
+      <li>✔ 24/7 podrška</li>
     </ul>
   </section>
 
