--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <p><strong>Lauš usluge j.d.o.o.</strong></p>
       <p>Trg Ante Starčevića 2, Zagreb</p>
       <p>📞 +385 91 637 4003</p>
-      <p>✉️ info@laususluge.hr</p>
+      <p>✉️ info@laususluge.hr</p> <!-- promijeniti email -->
     </div>
 
     <div>
@@ -35,7 +35,8 @@
   </div>
 
   <h3>Pošaljite upit</h3>
-  <form action="mailto:info@adriatransport.hr" method="post" enctype="text/plain">
+  <form action="mailto:info@laususluge.hr" method="post" enctype="text/plain">  <!-- promijeniti email -->
+
     <input type="text" name="Ime" placeholder="Vaše ime" required>
     <input type="email" name="Email" placeholder="Vaš email" required>
     <textarea name="Poruka" placeholder="Vaša poruka" required></textarea>
