--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
   <h3>Pošaljite upit</h3>
   <form action="mailto:info@laususluge.hr" method="post" enctype="text/plain">  <!-- promijeniti email -->
 
+    <input type="text" name="Ime" placeholder="Vaše ime" required>
     <textarea name="Poruka" placeholder="Vaša poruka" required></textarea>
     <button type="submit">Pošalji poruku</button>
   </form>
